--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react-router-dom": "^4.3.2",
     "@types/redux-actions": "^2.6.0",
     "@types/redux-logger": "^3.0.7",
+    "@types/redux-mock-store": "^1.0.1",
     "@types/styled-components": "^4.1.14",
     "axios": "^0.18.0",
     "react": "^16.8.6",
@@ -41,5 +42,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "jest": "^24.9.0",
+    "redux-mock-store": "^1.5.3"
+  }
 }
