Updated dependencies modules

--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/react-router-dom": "^4.3.2",
     "@types/redux-actions": "^2.6.0",
     "@types/redux-logger": "^3.0.7",
-    "@types/redux-mock-store": "^1.0.1",
     "@types/styled-components": "^4.1.14",
     "axios": "^0.18.0",
     "react": "^16.8.6",
@@ -44,7 +43,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "jest": "^24.9.0",
-    "redux-mock-store": "^1.5.3"
+    "jest": "23.6.0",
+    "redux-mock-store": "^1.5.3",
+    "@types/redux-mock-store": "^1.0.1"
   }
 }
